# MeshcoreBot

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: meshcorebot.example.yaml
src/meshcorebot/: __init__.py  __main__.py  config.py  scheduler.py  stats_store.py  transport.py  tx_throttle.py
src/meshcorebot/sinks/: __init__.py  base.py  console.py  jsonl.py  mqtt.py
src/meshcorebot/tasks/: __init__.py  base.py  chan_msg.py  trace_loop.py  trace_matrix.py
